# codeflow

./: README.md
app/: README.md  TODO.md  biome.json  package.json
app/.codeflow/: graph.json
app/src/: middleware.ts
app/src/app/: CodeEditorNode.tsx  code-editor-node.tsx  code-editor.tsx  diagram.tsx  flow-viewer.tsx  globals.css  layout.tsx  mermaid-theme.css  page.tsx
app/src/components/: code-editor-node.tsx  diagram.tsx  flow-viewer.tsx
app/src/components/code-editor/: code-editor.tsx  (+3 more)
app/src/db/: db.ts  schema.ts
app/src/lib/: file-annotations.test.ts  file-annotations.ts  graph-to-mermaid.test.ts  graph-to-mermaid.ts  memory.ts  mermaid.test.ts  mermaid.ts
client/: biome.json  index.html  package.json
client/src/: main.tsx
codeflow/: Cargo.toml
codeflow-cli/: .codeflow.json  Cargo.toml
codeflow-cli/src/: api.rs  config.rs  main.rs  scanner.rs
codeflow/src/: config.rs  main.rs  scanner.rs
server/: README.md  db.sqlite  index.ts  index.tsx  package.json  tsconfig.json
server/client/: home-page.tsx  index.html  layout.tsx  main.tsx
server/client/lib/: file-annotations.test.ts  file-annotations.ts  mermaid.test.ts
server/client/ui/: code-editor-node.tsx  diagram.tsx  flow-viewer.tsx  home-page.tsx  layout.tsx
server/lib/: db.ts  schemas.ts
vscode-extension/: .codeflow.json  README.md  biome.json  package.json  tsconfig.json
vscode-extension/src/: codeflowDocumentManager.ts  codeflowGraphManager.ts  config.ts  extension.ts  fileScanner.test.ts  fileScanner.ts  types.ts
vscode-extension/src/lib/: parser.test.ts  parser.ts
(+3 files in other folders)
