[package]
name = "codeflow"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Garcia <rafbgarcia@gmail.com>"]
description = "A tool to extract codeflow annotations from project files"
license = "MIT"
repository = "https://github.com/quickr/codeflow"


[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
ignore = "0.4.23"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
